<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.mostafa.graduationproject.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:focusableInTouchMode="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:background="@drawable/fields_border"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="2dp">

            <EditText
                android:id="@+id/SignUpFragment_EditText_FirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/fields_border"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="2dp">

            <EditText
                android:id="@+id/SignUpFragment_EditText_LastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                />

        </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/fields_border"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="2dp">

            <EditText
                android:id="@+id/SignUpFragment_EditText_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/fields_border"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="2dp">

            <EditText
                android:id="@+id/SignUpFragment_EditText_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/fields_border"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="2dp">

            <EditText
                android:id="@+id/SignUpFragment_EditText_RePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/SignUpFragment_Button_SignUp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/button"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/SignUpFragment_TextView_HaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textColor="@color/colorPrimary"
            android:clickable="true"
            android:layout_gravity="center"
            android:padding="4dp"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"/>

    </LinearLayout>

</ScrollView>
